--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ native-tls = "0.2.8"
 
 delegate = "0.6.1"
 regex = "1.5.4"
+
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
