Prepare shared state management; refactor async setup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Daniel Leong <me@dhleong.net>"]
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1.15.0", features = ["io-util", "io-std", "macros", "rt"] }
+tokio = { version = "1.15.0", features = ["io-util", "io-std", "macros", "rt-multi-thread"] }
 
 telnet = "0.1.4"
 url = "2.2.2"
