--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ regex = "1.5.4"
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+clap = { version = "3.1.7", features = ["derive"] }
