--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ regex = "1.5.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 clap = { version = "3.1.7", features = ["derive"] }
+bytes = "1.1.0"
