--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 clap = { version = "3.1.7", features = ["derive"] }
 bytes = "1.1.0"
+crossterm = "0.23.2"
