"Preserve" the output window on process exit
Next step is to be able to reuse the window on reconnect

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -3,3 +3,8 @@ set-option -g default-terminal "tmux-256color"
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 set-option -g status off
+
+# From https://stackoverflow.com/a/54371511
+set-option -g remain-on-exit on
+set-option -g remain-on-exit-format "DISCONNECTED."
+set-hook -g pane-died 'capture-pane -eN -S - -E -; save-buffer "$HOME/.config/kodachi/.sessions/#{session_name}"; delete-buffer; kill-session'
