--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ serde_json = "1.0"
 clap = { version = "3.1.7", features = ["derive"] }
 bytes = "1.1.0"
 crossterm = "0.23.2"
+ritelinked = "0.3.2"
