WIP: Begin rewriting telnet from scratch for async + minimal copy

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,8 @@ authors = ["Daniel Leong <me@dhleong.net>"]
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1.15.0", features = ["io-util", "io-std", "macros", "rt-multi-thread", "sync"] }
+tokio = { version = "1.15.0", features = ["io-util", "io-std", "macros", "net", "rt-multi-thread", "sync"] }
 
-telnet = "0.2.1"
 url = "2.2.2"
 native-tls = "0.2.8"
 
@@ -20,3 +19,4 @@ clap = { version = "3.1.7", features = ["derive"] }
 bytes = "1.1.0"
 crossterm = "0.23.2"
 ritelinked = "0.3.2"
+async-trait = "0.1.59"
