Reuse existing idle RPC process for a new connection
Primarily this fixes the issue where we're currently just spawning a new
process every time and abandoning the old one as a zombie in the
background, but this is how the RPC process was meant to be used anyway.

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -4,6 +4,8 @@ set-option -sa terminal-overrides ",xterm*:Tc"
 
 set-option -g status off
 
+set-option -g history-limit 999999
+
 # From https://stackoverflow.com/a/54371511
 set-option -g remain-on-exit on
 set-option -g remain-on-exit-format "DISCONNECTED."
