--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,11 @@ authors = ["Daniel Leong <me@dhleong.net>"]
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1.15.0", features = ["io-util", "io-std", "macros", "rt-multi-thread", "sync"] }
+tokio = { version = "1.23.0", features = ["io-util", "io-std", "macros", "net", "rt-multi-thread", "sync"] }
+tokio-native-tls = "0.3.0"
 
-telnet = "0.2.1"
-url = "2.2.2"
 native-tls = "0.2.8"
+url = "2.2.2"
 
 delegate = "0.6.1"
 regex = "1.5.4"
@@ -20,3 +20,4 @@ clap = { version = "3.1.7", features = ["derive"] }
 bytes = "1.1.0"
 crossterm = "0.23.2"
 ritelinked = "0.3.2"
+async-trait = "0.1.59"
