--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ bytes = "1.1.0"
 crossterm = "0.23.2"
 ritelinked = "0.3.2"
 async-trait = "0.1.59"
+log = { version = "0.4.17", features = ["std"] }
