--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ crossterm = "0.23.2"
 ritelinked = "0.3.2"
 async-trait = "0.1.59"
 log = { version = "0.4.17", features = ["std"] }
+supports-unicode = "1.0.2"
+supports-color = "1.3.1"
