--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -1,6 +1,6 @@
 # Enable RGB colour if running in xterm(1)
 set-option -g default-terminal "tmux-256color"
-set-option -sa terminal-overrides ",xterm*:Tc"
+set-option -sa terminal-overrides ",xterm*:Tc,*:rmcup=,*:smcup="
 
 set-option -g status off
 
