--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Daniel Leong <me@dhleong.net>"]
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1.23.0", features = ["io-util", "io-std", "macros", "net", "rt-multi-thread", "sync"] }
+tokio = { version = "1.23.0", features = ["io-util", "io-std", "macros", "net", "rt-multi-thread", "sync", "time"] }
 tokio-native-tls = "0.3.0"
 async-trait = "0.1.59"
 flate2 = "1.0.25"
