--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 delegate = "0.6.1"
+lazy_static = "1.4.0"
 log = { version = "0.4.17", features = ["std"] }
 regex = "1.5.4"
 ritelinked = "0.3.2"
