--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,15 @@ authors = ["Daniel Leong <me@dhleong.net>"]
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1.23.0", features = ["io-util", "io-std", "macros", "net", "rt-multi-thread", "sync", "time"] }
+tokio = { version = "1.23.0", features = [
+    "io-util",
+    "io-std",
+    "macros",
+    "net",
+    "rt-multi-thread",
+    "sync",
+    "time",
+] }
 tokio-native-tls = "0.3.0"
 async-trait = "0.1.59"
 flate2 = "1.0.25"
@@ -15,7 +23,7 @@ bytes = "1.1.0"
 native-tls = "0.2.8"
 url = "2.2.2"
 
-clap = { version = "3.1.7", features = ["derive"] }
+clap = { version = "=4.4.18", features = ["derive"] }
 crossterm = "0.23.2"
 supports-unicode = "1.0.2"
 supports-color = "1.3.1"
