--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,9 @@ tokio = { version = "1.23.0", features = [
     "time",
 ] }
 tokio-native-tls = "0.3.0"
+async-compression = { version = "0.4.18", features = ["tokio", "zlib"] }
 async-trait = "0.1.59"
-flate2 = "1.0.25"
+flate2 = "1.0.35"
 pin-project = "1.0.12"
 
 bytes = "1.1.0"
