--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ native-tls = "0.2.8"
 url = "2.2.2"
 
 clap = { version = "=4.4.18", features = ["derive"] }
-crossterm = "0.23.2"
+crossterm = { version = "0.28.1", features = ["event-stream"] }
 supports-unicode = "1.0.2"
 supports-color = "1.3.1"
 
@@ -38,3 +38,4 @@ regex = "1.5.4"
 ritelinked = "0.3.2"
 rand = "0.8.5"
 itertools = "0.10.5"
+futures = "0.3.31"
